--- a/src/app/post-login/components/leads-per-community/leads-per-community.component.scss
+++ b/src/app/post-login/components/leads-per-community/leads-per-community.component.scss
@@ -442,6 +442,7 @@ button:focus {
   .ag-checkbox-input {
     appearance: none;
     -webkit-appearance: none;
+    cursor: pointer;
   }
 
   .ag-header-select-all {
