Leads per community changes and addded saas revenue report

--- a/src/app/post-login/components/leads-per-community/leads-per-community.component.html
+++ b/src/app/post-login/components/leads-per-community/leads-per-community.component.html
@@ -12,7 +12,7 @@
                 (input)="onSearch()"         
                 id="filter-text-box"
                 >
-                <img src="assets/images/search-icon.png" alt="Seach icon">
+                <img src="assets/images/search-icon.png" alt="Search icon">
             </div>
             <button class="btn btn-export">Export</button>
         </div>
