--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -116,7 +116,7 @@
                 >
                   <span routerLink="/dashboard/profile"> Profile</span>
                   <span (click)="onSelectAccount()">Switch Account</span>
-                  <span>Sign Out</span>
+                  <span (click)="onSignOut()">Sign Out</span>
                 </div>
               </div>
             </div>
