iframe src changed

--- a/src/app/post-login/components/tour-video-pop-up/tour-video-pop-up.component.html
+++ b/src/app/post-login/components/tour-video-pop-up/tour-video-pop-up.component.html
@@ -16,5 +16,5 @@
     </div>
 
     <h1 class="dialog-title">Tour the dashboard in under 1 minute</h1>
-    <iframe width="600" height="400" [src]="iframeSrc" frameborder="0" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/302706764?h=fa08057428&title=0&byline=0&portrait=0?autoplay=1&muted=1" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
 </div>
