--- a/src/app/post-login/post-login.component.html
+++ b/src/app/post-login/post-login.component.html
@@ -1,3 +1,4 @@
+<app-announcement-banner *ngIf="bannerDisplay"></app-announcement-banner>
 <div class="container-wrapper d-flex flex-column">
   <app-header></app-header>
   <div class="routing-page">
