saas revenue change requests

--- a/src/app/post-login/components/financial-data/financial-data.component.html
+++ b/src/app/post-login/components/financial-data/financial-data.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="main-container">sa
     <div class="section-header">
         <div class="heading-text d-flex">
             <img src="assets/images/bar-chart-icon.png" alt="Bar-chart icon">
@@ -14,7 +14,8 @@
                 >
                 <img src="assets/images/search-icon.png" alt="Search icon">
             </div>
-            <button class="btn btn-export">Export</button>
+            <button class="btn btn-export">EXPORT</button>
+            <button class="btn btn-create-new">CREATE NEW</button>
         </div>
     </div>
 
