--- a/src/app/post-login/components/financial-data/financial-data.component.scss
+++ b/src/app/post-login/components/financial-data/financial-data.component.scss
@@ -83,9 +83,8 @@ button:focus {
             }
         }
 
-        .btn-export{
+        .btn-create-new{
             display: flex;
-            width: 92px;
             height: 32px;
             justify-content: center;
             align-items: center;
@@ -97,6 +96,23 @@ button:focus {
             color: #FFF;
             font-size: 12px;
             line-height: 16px;
+        }
+
+        .btn-export{
+            display: flex;
+            width: 92px;
+            height: 32px;
+            justify-content: center;
+            align-items: center;
+            border-radius: 4px;
+            background: #e4eff3;
+            padding: 8px 14px 8px 15px;
+            text-transform: uppercase;
+            font-family: 'Proxima Nova';
+            color: #296689;
+            font-size: 12px;
+            font-weight: 600;
+            line-height: 16px; 
         }
     }
 }
