--- a/src/app/shared/components/header-two/header-two.component.html
+++ b/src/app/shared/components/header-two/header-two.component.html
@@ -53,4 +53,4 @@
         <div class="profile-button">JV</div>
     </div>
 </div>
-<kendo-breadcrumb [items]="items"></kendo-breadcrumb>
+<kendo-breadcrumb [items]="items" (itemClick)="onItemClick($event)"></kendo-breadcrumb>
