--- a/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.scss
+++ b/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.scss
@@ -41,8 +41,8 @@ button:focus {
         align-items: center;
 
         img{
-            width: 27px;
-            height: 24px;
+            width: 35px;
+            height: 35px;
         }
     
         h1{
@@ -57,6 +57,10 @@ button:focus {
         display: flex;
         gap: 20px;
         align-items: center;
+
+        @media (max-width:1300px) {
+            gap: 5px;
+        }
 
         .input-container{
             position: relative;
@@ -80,6 +84,10 @@ button:focus {
                 border-radius: 4px;
                 border: 1px solid #DFDFDF;
                 background:  #FFF;
+
+                @media (max-width:1300px) {
+                    width: 400px;
+                }
             }
         }
 
@@ -130,7 +138,6 @@ button:focus {
     position: relative;
 }
 
-// TABLE STYLE //
 .ag-theme-balham {
     --ag-selected-row-background-color: #f3f6f7 !important;
     --ag-row-hover-color: none !important;
@@ -161,30 +168,6 @@ button:focus {
         font-family:'Proxima Nova';
         font-size: 14px;
         font-weight: 400;
-        line-height: 16px; 
-    }
-
-    .ag-cell-expandable {
-        align-items: center;
-    }
-
-    .ag-row-level-1 {
-        background: rgba(217, 217, 217, 0.2);
-    }
-
-    .ag-icon-tree-closed::before {
-        content: url("../../../../assets/images/chevron-right-icon.svg");
-    }
-
-    .ag-icon-tree-open::before {
-        content: url("../../../../assets/images/chevron-down-icon.svg");
-    }
-
-    .ag-group-contracted,
-    .ag-group-expanded {
-        width: 11px;
-        height: unset !important;
-        margin-top: -5px;
     }
 
     // FLOATING FILTER
@@ -200,7 +183,7 @@ button:focus {
     }
 
     .ag-icon-filter::before {
-        content: url("../../../../assets/images/floating-filter-icon.svg");
+        content: url("/assets/images/floating-filter-icon.svg");
     }
 
     .ag-header-row-column-filter {
@@ -218,10 +201,10 @@ button:focus {
     }
 
     .ag-header-expand-icon-collapsed .ag-icon-contracted::before{
-        content: url("../../../../assets/images/chevron-right-icon.svg");
+        content: url("/assets/images/chevron-right-icon.svg");
     }
     .ag-icon-expanded::before{
-        content: url("../../../../assets/images/chevron-left.svg");
+        content: url("/assets/images/chevron-left.svg");
     }
 
     .ag-icon-contracted{
@@ -275,7 +258,7 @@ button:focus {
   
     .ag-checkbox-input-wrapper::after {
       display: block;
-      content: url("../../../../assets/images/chevron-right-icon.svg");
+      content: url("/assets/images/chevron-right-icon.svg");
       background: fixed;
       background-size: cover;
       margin-left: 2px;
@@ -284,7 +267,7 @@ button:focus {
   
     .ag-checkbox-input-wrapper.icon-clicked::after {
       display: block;
-      content: url("../../../../assets/images/chevron-down-icon.svg");
+      content: url("/assets/images/chevron-down-icon.svg");
       background: fixed;
       background-size: cover;
       margin-left: 0;
@@ -359,50 +342,6 @@ button:focus {
         margin-top: 63px;
     }
 }
-
-// STATUSBAR //
-:host ::ng-deep {
-    .ag-status-name-value {
-      color: #2a2a2a;
-      font-family: "Proxima Nova";
-      font-size: 12px;
-      line-height: 16px;
-      padding: 0;
-    }
-  
-    .ag-status-name-value-value {
-      font-weight: 700;
-    }
-  
-    .ag-status-name-value span:first-child {
-      font-weight: 400;
-    }
-  
-    .ag-status-bar {
-      min-height: 37px;
-      padding: 11px 25px;
-    }
-}
-
-.status-bar-text {
-    position: absolute;
-    left: 24px;
-    bottom: 48px;
-  
-    p {
-        color: #2A2A2A;
-        font-family: 'Proxima Nova';
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 16px;
-    }
-  
-    span {
-      font-weight: 700;
-    }
-}
-
-
 // PAGING PANEL 
 .items-dropdown {
     position: absolute;
@@ -473,15 +412,44 @@ button:focus {
       position: absolute !important;
     }
   }
-
-  //PARENT LINK
-  :host ::ng-deep .parent-link{
-    text-decoration: none;
-    color: #446a94;
-    font-weight: 500;
-    cursor: pointer;
+// STATUSBAR //
+:host ::ng-deep {
+    .ag-status-name-value {
+      color: #2a2a2a;
+      font-family: "Proxima Nova";
+      font-size: 12px;
+      line-height: 16px;
+      padding: 0;
+    }
+  
+    .ag-status-name-value-value {
+      font-weight: 700;
+    }
+  
+    .ag-status-name-value span:first-child {
+      font-weight: 400;
+    }
+  
+    .ag-status-bar {
+      min-height: 37px;
+      padding: 11px 25px;
+    }
 }
 
-::ng-deep .hide-header-name .ag-header-cell-comp-wrapper .ag-cell-label-container .ag-header-cell-label .ag-header-cell-text{
-    display: none;
+.status-bar-text {
+    position: absolute;
+    left: 24px;
+    bottom: 48px;
+  
+    p {
+        color: #2A2A2A;
+        font-family: 'Proxima Nova';
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 16px;
+    }
+  
+    span {
+      font-weight: 700;
+    }
 }
