--- a/src/app/post-login/components/home/home.component.html
+++ b/src/app/post-login/components/home/home.component.html
@@ -74,6 +74,7 @@
                   [disabledDates]="disabledDate"
                   [selectionRange]="range"
                   [focusedDate]="range.start || range.end"
+                  [disabled]="checkForInvalidDate(range.start) || checkForInvalidDate(range.end)"
                 >
                 <ng-template kendoCalendarHeaderTitleTemplate let-title>
                   <div class="calender-heading">
@@ -85,18 +86,18 @@
               </kendo-multiviewcalendar>
               <div class="calender-buttons d-flex align-items-center justify-content-between">
                 <div class="date-selection-inputs d-flex gap-2">
-                  <div class="date-start-input">
+                  <div class="date-start-input d-flex flex-column">
                     <label for="startDate" class="date-label">Start date</label>
-                    <kendo-dateinput id="startDate" class="date-input" [(value)]="range.start"></kendo-dateinput>
+                    <kendo-dateinput id="startDate" class="date-input" [(value)]="range.start" [class.error]="checkForInvalidDate(range.start)"></kendo-dateinput>
                   </div>
-                  <div class="date-start-input">
+                  <div class="date-start-input d-flex flex-column">
                     <label for="endDate" class="date-label">End date</label>
-                    <kendo-dateinput id="endDate" class="date-input" [(value)]="range.end"></kendo-dateinput>
+                    <kendo-dateinput id="endDate" class="date-input" [(value)]="range.end" [class.error]="checkForInvalidDate(range.end)"></kendo-dateinput>
                   </div>
                 </div>
                 <div class="d-flex align-items-center">
                   <button class=" btn-cancel" (click)="onCancel()">Cancel</button>
-                  <button class=" btn-save" (click)="onDateRangeSave()" [disabled]="range.end === null">Save</button>
+                  <button class=" btn-save" (click)="onDateRangeSave()" [disabled]="range.end === null || invalidStartDate || invalidEndDate">Save</button>
                 </div>
               </div>
             </div>
