Announcement management comp added

--- a/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.html
+++ b/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
     <div class="section-header">
         <div class="heading-text d-flex">
-            <img src="assets/images/client-icon.png" alt="Bar-chart icon">
+            <img src="assets/images/person-pin-outline-rounded.svg" alt="Bar-chart icon">
             <h1>{{clientName}}</h1>
         </div>
         <div class="search-section">
