--- a/src/app/shared/components/header-two/header-two.component.html
+++ b/src/app/shared/components/header-two/header-two.component.html
@@ -23,8 +23,8 @@
                 class="popup popup-client-dashboard d-flex flex-column"
                 *ngIf="showClientDashboardMenu"
             >
-                <span>Dashboard Announcements</span>
-                <span (click)="onDataAndReports()">Data & Reports</span>
+                <span (click)="onDashboardAnnouncement()">Dashboard Announcements</span>
+                <span>Data & Reports</span>
                 <span>Users</span>
             </div>
         </div>
