--- a/src/app/post-login/components/announcement-management/announcement-management.component.scss
+++ b/src/app/post-login/components/announcement-management/announcement-management.component.scss
@@ -9,17 +9,11 @@ button:focus {
 }
 
 .main-container {
-    padding: 42px 104px 165px 113px;
-
-    @media (min-width: 1920px) {
-        width: 1694px !important;
-        margin: 33px auto 42px !important;
-        padding: 42px 0px 165px 0px;
-    }
+    padding: 0 30px 42px 30px;
 }
 
 .section-header{
-    margin-top: 27px; 
+    margin-top: 15px; 
     display: flex;
     justify-content: space-between;
 
@@ -28,8 +22,8 @@ button:focus {
         align-items: center;
 
         img{
-            width: 35px;
-            height: 35px;
+            width: 24px;
+            height: 24px;
         }
     
         h1{
@@ -77,39 +71,38 @@ button:focus {
                 }
             }
         }
-
-        .btn-create-new{
-            display: flex;
-            height: 32px;
-            justify-content: center;
-            align-items: center;
-            border-radius: 4px;
-            background: #296689;
-            padding: 8px 14px 8px 15px;
-            text-transform: uppercase;
-            font-family: 'Proxima Nova';
-            color: #FFF;
-            font-size: 12px;
-            line-height: 16px;
-        }
-
-        .btn-export{
-            display: flex;
-            width: 92px;
-            height: 32px;
-            justify-content: center;
-            align-items: center;
-            border-radius: 4px;
-            background: #e4eff3;
-            padding: 8px 14px 8px 15px;
-            text-transform: uppercase;
-            font-family: 'Proxima Nova';
-            color: #296689;
-            font-size: 12px;
-            font-weight: 600;
-            line-height: 16px; 
-        }
     }
+}
+.btn-create-new{
+    display: flex;
+    height: 32px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background: #296689;
+    padding: 8px 14px 8px 15px;
+    text-transform: uppercase;
+    font-family: 'Proxima Nova';
+    color: #FFF;
+    font-size: 12px;
+    line-height: 16px;
+}
+
+.btn-cancle{
+    display: flex;
+    width: 92px;
+    height: 32px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background: #e4eff3;
+    padding: 8px 14px 8px 15px;
+    text-transform: uppercase;
+    font-family: 'Proxima Nova';
+    color: #296689;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 16px; 
 }
 
 ::-webkit-input-placeholder{
@@ -125,6 +118,7 @@ button:focus {
     position: relative;
 }
 
+// TABLE STYLE //
 .ag-theme-balham {
     --ag-selected-row-background-color: #f3f6f7 !important;
     --ag-row-hover-color: none !important;
@@ -151,10 +145,22 @@ button:focus {
     .ag-cell {
         display: flex;
         align-items: center;
-        color: #2F2F2F;
+        color: #2A2A2A;
         font-family:'Proxima Nova';
         font-size: 14px;
         font-weight: 400;
+    }
+
+    .ag-center-cols-container .ag-row .ag-cell{
+        padding-left: 30px;
+    }
+
+    .ag-header-viewport .ag-header-row .ag-header-cell:first-child{
+        padding-left: 30px;
+    }
+
+    .ag-header-viewport .ag-header-row .ag-header-cell.ag-floating-filter:first-child{
+        width: 220px !important;
     }
 
     // FLOATING FILTER
@@ -224,50 +230,12 @@ button:focus {
     }
 }
 
-// CHECKBOX //
-:host ::ng-deep .ag-pinned-left-header {
-    .ag-checkbox-input {
-      appearance: none;
-      -webkit-appearance: none;
-      cursor: pointer;
-    }
-  
-    .ag-header-select-all {
-      margin-right: 5px;
-    }
-  
-    .ag-checkbox-input-wrapper:active {
-      box-shadow: none;
-    }
-    .ag-checkbox-input-wrapper {
-      background-color: transparent !important;
-    }
-  
-    .ag-checkbox-input-wrapper::after {
-      display: block;
-      content: url("/assets/images/chevron-right-icon.svg");
-      background: fixed;
-      background-size: cover;
-      margin-left: 2px;
-      margin-top: -2px;
-    }
-  
-    .ag-checkbox-input-wrapper.icon-clicked::after {
-      display: block;
-      content: url("/assets/images/chevron-down-icon.svg");
-      background: fixed;
-      background-size: cover;
-      margin-left: 0;
-      margin-top: -4px;
-    }
-}
-
 // RESET BUTTON //
 .resetButton {
     position: absolute;
     background-color: #f7f7f7;
     border-right: 1px solid rgb(189, 195, 199) !important;
-    height: 63px;
+    height: 73px;
     width: 87.5%;
     border: 0;
     font-size: 14px;
@@ -326,7 +294,7 @@ button:focus {
     }
 
     .ag-side-bar-right .ag-tool-panel-wrapper {
-        margin-top: 63px;
+        margin-top: 73px;
     }
 }
 // PAGING PANEL 
@@ -440,3 +408,212 @@ button:focus {
       font-weight: 700;
     }
 }
+
+//Add - Edit Announcmet 
+.edit-announcement-container{
+    width: 331px;
+    padding: 25px 20px;
+    box-shadow: 0px 4px 10px rgba(#000, 0.4);
+    position: relative;
+}
+
+.announcement-header{
+    font-size: 16px;
+    color: #2A2A2A;
+    font-weight: 700;
+    font-family:  'Proxima Nova';
+    line-height: 24px;
+    margin-bottom: 24px;
+}
+
+.edit-announcement-container .close-icon{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    height: 25px;
+    cursor: pointer;
+}
+
+.edit-announcement-container .title-text{
+    font-family: 'Proxima Nova';
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 600;
+    margin-bottom: 8px;
+}
+
+.custom-gap-20{
+    gap:20px;
+}
+
+.margin-bottom-8{
+    margin-bottom: 8px;
+}
+
+.info-icon{
+    height: 10px;
+    width: 10px;
+}
+
+.toggle-button{
+    display: flex;
+    gap: 12px;
+    align-items: center;
+}
+
+.dismissable-toggle{
+    color: #2A2A2A;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16px;
+    font-family: 'Proxima Nova';
+    margin-bottom: -2px;
+}
+
+.buttons-container{
+    border-top: 1px solid #DFDFDF;
+    padding-top: 20px;
+}
+
+.status-circle{
+    width: 8px;
+    height: 8px;
+    display: inline-block;
+    background: #808080;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.dropdown {
+    border: 1px solid #dfdfdf;
+    height: 30px;
+    background-color: #FFF;
+    font-family: 'Proxima Nova';
+    font-size: 12px;
+}
+
+.mb-2px{
+    margin-bottom: -2px;
+}
+
+.inputbox-text{
+    font-family: 'Proxima Nova';
+    font-size: 12px;
+    border : 1px solid #dfdfdf;
+}
+
+:host ::ng-deep .dropdown .k-input-value-text {
+    display: flex;
+    align-items: center;
+}
+
+:host ::ng-deep .dropdown{
+    .k-input-button{
+        display: none;
+    }
+
+    .k-input-inner::after{
+        content: url('../../../../assets/images/chevron-down-icon.svg');
+        margin-top: 4px;
+    }
+
+    &-open{
+        .k-input-inner::after{
+            content: url("../../../../assets/images/up-arrow.svg");
+        }  
+    }
+}
+
+::ng-deep.k-list-content .k-list-item.k-selected{
+      background: #296689;
+}
+  
+// Kendo Toggle Button
+:host ::ng-deep .k-switch-md .k-switch-track {
+    width: 40px;
+    height: 24px;
+    border: none;
+    background-color: #D9D9D9;
+}
+  
+:host ::ng-deep .k-switch-md {
+    width: 40px;
+    height: 24px;
+  
+    .k-switch-thumb {
+      width: 20px;
+      height: 20px;
+      background-color: #B9B9B9;
+    }
+  
+    .k-switch-label-off,
+    .k-switch-label-on {
+      display: none;
+    }
+}
+  
+:host ::ng-deep .k-switch-on:focus .k-switch-track,
+:host ::ng-deep .k-switch-off:focus .k-switch-track {
+    outline: none;
+}
+  
+:host ::ng-deep .k-switch-on .k-switch-track {
+    background-color: #296689;
+}
+
+:host ::ng-deep{
+    .k-switch-md.k-switch-off .k-switch-thumb-wrap {
+        left: calc( 12px + 0px );
+    }
+
+    .k-switch-md.k-switch-on .k-switch-thumb-wrap {
+        left: calc( 100% - 12px - 0px );
+    }
+} 
+
+
+// Action column
+:host ::ng-deep .custom-gap {
+    gap: 15px;
+}
+
+:host ::ng-deep .user-status,
+:host ::ng-deep .edit-label {
+  margin: 0;
+  border-radius: 5px;
+  background: #d9d9d9 !important;
+  color: #4e4e4e;
+  font-family: Helvetica;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 32px;
+  height: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 53.106px;
+  visibility: hidden;
+}
+
+:host ::ng-deep .status-div:hover .user-status {
+  visibility: visible !important;
+}
+
+:host ::ng-deep .edit-div:hover .edit-label {
+  visibility: visible !important;
+}
+
+.action-header {
+    display: none;
+}
+  
+::ng-deep{
+    .btn-status {
+        padding-bottom: 0px !important;
+    }
+
+    .action-icons{
+        height: 15px;
+        width: 15px;
+    }
+} 
