--- a/src/app/post-login/components/announcement-management/announcement-management.component.html
+++ b/src/app/post-login/components/announcement-management/announcement-management.component.html
@@ -92,7 +92,7 @@
     
                 <div class="buttons-container d-flex gap-2">
                     <button class="btn btn-create-new" (click)="onSaveChanges()">Save Changes</button>
-                    <button class="btn btn-cancle">Cancel</button>
+                    <button class="btn btn-cancle" (click)="onCancel()">Cancel</button>
                 </div>
             </div>
             
