SaaS revenue and dropdown changes

--- a/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.html
+++ b/src/app/post-login/components/financial-data/edit-saas-revenue/edit-saas-revenue.component.html
@@ -30,6 +30,12 @@
             [gridOptions]="gridOptions"
             [sideBar]="sideBar"
             [rowSelection]="rowSelection"
+            [enableRangeSelection]="true"
+            [enableFillHandle]="true"
+            [undoRedoCellEditing]="true"
+            [enableCellChangeFlash]="true"
+            (cellValueChanged)="onCellValueChanged($event)"
+            (cellEditingStopped)="onCellEditingStopped($event)"
             (selectionChanged)="onSelectionChanged($event)"
             (toolPanelVisibleChanged)="onToolPanelVisibleChanged($event)"
             [pagination]="true"
